# edge-fpga-linux-inspection-node

./: .gitignore  README.md  数据包格式.txt
docs/: ARCHITECTURE.md  DEMO_CHECKLIST.md  DEMO_GUIDE.md  DEMO_VIDEO_SCRIPT_90S.md  IMAGE_PATH_AND_DDR3.md  INTERVIEW_NOTES.md  RESUME_PROJECT.md  SOURCE_READING_GUIDE.md
edge_node_service/: CMakeLists.txt  README.md  edge-node.service
edge_node_service/config/: config.json
edge_node_service/include/: config.hpp  logger.hpp  protocol.hpp  service.hpp
edge_node_service/src/: config.cpp  logger.cpp  main.cpp  service.cpp
edge_node_service/web/: index.html
edge_vision_node_fpga/: README.md
edge_vision_node_fpga/constrs/: top_ov2640_ddr3_framebuffer.xdc  top_ov2640_ddr3_udp_preview.xdc
edge_vision_node_fpga/doc/: DDR3_PREVIEW_TELEMETRY_NOTES_20260423.md  DDR3_ROUTE_GUIDE.md  DDR3_UDP_PREVIEW_GUIDE.md  IP_REQUIREMENTS.md  IP_REQUIREMENTS_DDR3.md  VIVADO_SOURCE_LIST.md  VIVADO_SOURCE_LIST_DDR3.md
edge_vision_node_fpga/rtl/buffer/: edge_ddr3_ctrl_2port.v  edge_ddr3_framebuffer.v  edge_fifo2mig_axi.v  ov2640_rgb565_packer.v  pulse_sync_toggle.v
edge_vision_node_fpga/rtl/camera/: frame_sync_counter.v  ov2640_capture_if.v  ov2640_init_table_min.v  ov2640_init_table_svga_rgb565.v  ov2640_power_seq.v  ov2640_sccb_init.v  sccb_master_write.v
edge_vision_node_fpga/rtl/clk_rst/: clk_rst_mgr.v
edge_vision_node_fpga/rtl/ctrl/: cmd_async_fifo.v  udp_cmd_packet_parser.v  vision_reg_bank.v
edge_vision_node_fpga/rtl/debug/: frame_stats_core.v  ov2640_status_bus.v  packet_stream_to_uart.v  uart_tx_byte.v
(+19 files in other folders)
